<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    tools:context=".ui.auth.SignUpFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_up_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/blue_oyster_cult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/blue_oyster_cult"
        android:hint="@string/name_hint"
        android:layout_marginTop="40dp"
        app:helperTextTextColor="?attr/accentColor"
        app:layout_constraintTop_toBottomOf="@id/sign_up_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:textColor="?attr/primaryTextColor"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surname_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/blue_oyster_cult"
        android:hint="@string/surname_hint"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/name_text_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surname_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:textColor="?attr/primaryTextColor"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:checkedButton="@id/male_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/surname_text_field"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/male_radio_button"
            android:buttonTint="?attr/colorPrimary"
            android:text="@string/male"
            android:textColor="?attr/primaryTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/female_radio_button"
            android:text="@string/female"
            android:textColor="?attr/primaryTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="?attr/colorPrimary"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/blue_oyster_cult"
        android:layout_marginStart="40dp"
        android:hint="@string/date_hint"
        app:layout_constraintTop_toTopOf="@id/gender_radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gender_radio_group"
        app:layout_constraintBottom_toBottomOf="@id/gender_radio_group">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:lines="1"
            android:textColor="?attr/primaryTextColor"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/blue_oyster_cult"
        android:hint="@string/email_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_radio_group"
        app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:textColor="?attr/primaryTextColor"
        android:inputType="textEmailAddress"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/blue_oyster_cult"
        android:layout_marginTop="20dp"
        android:hint="@string/password_hint"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text_field"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/primaryTextColor"
            android:lines="1"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/blue_oyster_cult"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        android:hint="@string/confirm_password_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_field"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/primaryTextColor"
            android:lines="1"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_text_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_in_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_sentence"
        android:textSize="16sp"
        android:textColor="?attr/primaryTextColor"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>