<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.home.PersonalAccountFragment"
    android:backgroundTint="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <!-- TODO добавить потом скругленные углы возможно -->
        <!-- TODO добавить нормальный placeholder на картинку -->

        <ImageView
            android:id="@+id/imv_profile"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/images_placeholder"
            android:backgroundTint="?attr/inputTextStroke"/>

        <TextView
            android:id="@+id/tv_fio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:textColor="?attr/primaryTextColor"
            app:layout_constraintBottom_toTopOf="@id/tv_email"
            app:layout_constraintStart_toEndOf="@id/imv_profile"
            app:layout_constraintTop_toTopOf="@id/imv_profile" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/imv_profile"
            app:layout_constraintStart_toEndOf="@id/imv_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_fio" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/snowflake"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            app:srcCompat="@drawable/account"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="?attr/colorPrimary" />
        <TextView
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_data"
            android:textSize="14sp"
            android:textColor="?attr/primaryTextColor" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/snowflake"/>

    <LinearLayout
        android:id="@+id/user_adverts"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:focusable="true">

        <ImageView
            app:srcCompat="@drawable/advert"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="?attr/colorPrimary" />
        <TextView
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_adverts"
            android:textSize="14sp"
            android:textColor="?attr/primaryTextColor" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/snowflake"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            app:srcCompat="@drawable/briefcase"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="?attr/colorPrimary" />
        <TextView
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_profiles"
            android:textSize="14sp"
            android:textColor="?attr/primaryTextColor" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/snowflake"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textColor="?attr/primaryTextColor"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/snowflake"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            app:srcCompat="@drawable/information"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="?attr/colorPrimary" />
        <TextView
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:textSize="14sp"
            android:textColor="?attr/primaryTextColor" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/snowflake"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            app:srcCompat="@drawable/help"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="?attr/colorPrimary" />
        <TextView
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technical_help"
            android:textSize="14sp"
            android:textColor="?attr/primaryTextColor" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/snowflake"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            app:srcCompat="@drawable/settings"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="?attr/colorPrimary" />
        <TextView
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="14sp"
            android:textColor="?attr/primaryTextColor"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/snowflake"/>
</LinearLayout>